cluster/apps/media/lazylibrarian/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lazylibrarian
  namespace: media
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: networking
    sectionName: https
  hostnames:
  - "lazylibrarian.${SECRET_CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: lazylibrarian
      port: 5299
